# QftB

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
.dbt/: profiles.yml
.github/workflows/: rawg_pipeline.yml
app/streamlit_app/: main.py
app/streamlit_app/app_pages/game_data/: main_dashboard.py  rawg_analytics.py
dbt_qftb/: README.md  dbt_project.yml
dbt_qftb/models/marts/: mart_game_releases_by_month_year.sql  mart_game_releases_by_month_year.yml  mart_games.sql  mart_games.yml  mart_rawg__games.sql  mart_rawg__games.yml  mart_rawg__releases_by_games_monthyear.sql  mart_rawg__releases_by_games_monthyear.yml  mart_rawg__releases_by_games_platform.sql  mart_rawg__releases_by_games_platform.yml  mart_rawg__releases_by_gametags_monthyear.sql  mart_rawg__releases_by_gametags_monthyear.yml
dbt_qftb/models/staging/: _sources.yml  stg_rawg__game_details.sql  stg_rawg__game_details.yml  stg_rawg__games.sql  stg_rawg__games.yml  stg_rawg__parent_platform.sql  stg_rawg__parent_platform.yml  stg_rawg__platforms.sql  stg_rawg__platforms.yml  stg_rawg__tags.sql  stg_rawg__tags.yml
src/etl/cleaners/: rawg_cleaner.py  rawg_cleaner_game_details.py  rawg_cleaner_games.py  rawg_cleaner_parent_platforms.py  rawg_cleaner_platforms.py  rawg_cleaner_tag_details.py  rawg_cleaner_tags.py
src/etl/fetchers/: rawg_fetcher.py  rawg_fetcher_game_details.py  rawg_fetcher_games.py  rawg_fetcher_parent_platforms.py  rawg_fetcher_platforms.py  rawg_fetcher_tag_details.py  rawg_fetcher_tags.py
src/models/: schema.py
src/utils/: logger.py  supabase_client.py  supabase_tools.py
(+2 files in other folders)
